# transactions-service/docs/swagger.yaml
@@ -1,4 +1,31 @@
 definitions:
+  model.Statistics:
+    properties:
+      amount:
+        type: number
+      count:
+        type: integer
+      groups:
+        items:
+          $ref: '#/definitions/model.StatisticsGroup'
+        type: array
+    type: object
+  model.StatisticsGroup:
+    properties:
+      amount:
+        type: number
+      count:
+        type: integer
+      name:
+        type: string
+    type: object
+  model.StatisticsResponse:
+    properties:
+      expenses:
+        $ref: '#/definitions/model.Statistics'
+      income:
+        $ref: '#/definitions/model.Statistics'
+    type: object
   model.TransactionResponse:
     properties:
       amount:
@@ -17,6 +44,30 @@ info:
   title: Transactions Service API
   version: "1.0"
 paths:
+  /statistics/{by}:
+    get:
+      parameters:
+      - description: Report grouped by
+        enum:
+        - category
+        - merchant
+        in: path
+        name: by
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.StatisticsResponse'
+            type: array
+      summary: Retrieve transactions statistics by category
+      tags:
+      - transaction
+      - statistics
   /transactions:
     get:
       produces:
